[tool.poetry]
name = "anseljh-github-io"
version = "0.1.0"
description = ""
authors = ["Ansel Halliburton <github@anseljh.com>"]
readme = "README.md"
packages = [{include = "anseljh"}]

[tool.poetry.dependencies]
python = "^3.9"
Nikola = {extras = ["extras"], version = "^8.2.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
